# language-vhdl-quote

./: .dir-locals.el  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  language-vhdl-quote.cabal  package.yaml  stack.yaml
examples/: vhdlgen.hs
src/Language/: VHDL.hs
src/Language/VHDL/: Lexer.hs  Parser.hs  Pretty.hs  Quote.hs  Syntax.hs
src/Language/VHDL/Parser/: Internal.hs  Monad.hs  Util.hs
src/Language/VHDL/Quote/: Internal.hs  Quoters.hs
src/Text/PrettyPrint/: Mainland.hs
test/: AQTest.hs  Main.hs  aqtest.hs  dumpast.hs  vests.hs
test/vests/: .gitignore  Makefile  README  suite.tar.xz  testenv.sh  testsuite.sh  transform_files.sh
test/vests/vhdl-93/ashenden/compliant/: ch_01_fg_01_07.vhd  ch_01_fg_01_11.vhd  ch_01_tb_01_02.vhd  ch_18_fg_18_09.vhd
test/vests/vhdl-93/billowitch/compliant/: compliant.exp
