name:                language-vhdl-quote
version:             0.1.0.0
synopsis:            VHDL quasiquoting library
license:             LGPL-3
license-file:        LICENSE
author:              Truls Asheim <truls@asheim.dk>
maintainer:          truls@asheim.dk
homepage:            https://github.com/truls/language-vhdl-quote
description:         VHDL Parser and pretty printer with quasiquoting support. Support VHDL as specified in VHDL language reference manual (2008 Edition). Based on Markus Aronsson's language-vhdl package.
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:        git
  location:    git://github.com/truls/language-vhdl-quote

library
  exposed-modules:     Language.VHDL
                     , Language.VHDL.Pretty
                     , Language.VHDL.Syntax
                     , Language.VHDL.Parser
                     , Language.VHDL.Quote
  ghc-options:       -Wall
  other-modules:       Language.VHDL.Lexer
                     , Language.VHDL.Parser.Internal
                     , Language.VHDL.Parser.Monad
                     , Language.VHDL.Parser.Util
                     , Language.VHDL.Quote.Internal
                     , Language.VHDL.Quote.Quoters

  other-extensions:    StandaloneDeriving
                     , FlexibleInstances
  build-depends:       base   >=4 && <5
                     , parsec >= 3.1.1
                     , here >= 1.2.11
                     , template-haskell >= 2.11.1.0
                     , mtl >= 2.2.1
                     , haskell-src-meta >= 0.8.0.1
                     , syb >= 0.7
                     , mainland-pretty >= 0.6.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dumpast
           main-is: dumpast.hs
           hs-source-dirs: test
           build-depends: base   >=4 && <5
                        , pretty-show >= 1.6.13
                        , parsec >= 3.1.1
                        , here >= 1.2.11
                        , template-haskell >= 2.11.1.0
                        , mtl >= 2.2.1
                        , language-vhdl-quote
                        , directory >= 1.3.0.0
                        , mainland-pretty >= 0.6.1
           ghc-options: -Wall
           default-language: Haskell2010

executable vhdlgen
           main-is: vhdlgen.hs
           hs-source-dirs: examples
           build-depends: base   >=4 && <5
                        , language-vhdl-quote
           default-language: Haskell2010

Test-Suite vests
           type: exitcode-stdio-1.0
           hs-source-dirs: test
           main-is: vests.hs
           build-depends: base >=4 && <5
                        , process
                        , language-vhdl-quote
           ghc-options: -Wall
           default-language: Haskell2010


Test-Suite antiquote-tests
           type: exitcode-stdio-1.0
           other-modules: Language.VHDL.Lexer
                        , Language.VHDL.Parser
                        , Language.VHDL.Parser.Internal
                        , Language.VHDL.Parser.Monad
                        , Language.VHDL.Pretty
                        , Language.VHDL.Syntax
                        , Language.VHDL.Parser.Util
                        , Language.VHDL.Quote
                        , Language.VHDL.Quote.Internal
                          Language.VHDL.Quote.Quoters

           main-is: AQTest.hs
           hs-source-dirs: test
                         , src
           build-depends: base >=4 && <5
                        , here >= 1.2.11
                        , parsec >= 3.1.1
                        , pretty-show >= 1.6.13
                        , template-haskell >= 2.11.1.0
                        , mtl >= 2.2.1
                        , temporary >= 1.2.1.1
                        , directory >= 1.3.0.0
                        , filepath >= 1.4.1.1
                        , monadIO >= 0.10.1.4
                        , Command >=0.0.7
                        , tasty >= 0.11.3
                        , tasty-hunit >= 0.9.2
                        , syb >= 0.7
                        , haskell-src-meta >= 0.8.0.1
                        , mainland-pretty >= 0.6.1
           ghc-options: -Wall
           default-language: Haskell2010
